deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comision-variable
  labels:
    app: comision-variable
spec:
  selector:
    app: comision-variable
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
